--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Johnny's Zoo</title>
+    <title>Jay's Zoo</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
   </head>
   <body>
-    <h1>Welcome to Johnny's Zoo</h1>
+    <h1>Welcome to Jay's Zoo</h1>
     <h3>See the animals at the zoo:</h3>
     <div class="link">
       <a href="polar-bear.html">Polar Bear</a>
+    </div>
+    <div class="link">
+      <a href="monkey.html">Monkey</a>
+    </div>  
+    <div class="link">
+      <a href="lion.html">Lion</a>
+    </div>
+    <div class="link">
+      <a href="tiger.html">Tiger</a>
     </div>
   </body>
 </html>
